// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Consonant/FilterItem Check snapshots should renders correctly when closed 1`] = `
<div
  className="consonant-filters--item"
  data-testid="filter-item"
>
  <div
    className="consonant-filters--item-inner"
  >
    <h3
      className="consonant-filters--item-name"
    >
      <img
        alt=""
        loading="lazy"
        src="https://upload.wikimedia.org/wikipedia/commons/e/e0/Check_green_icon.svg"
        width="16"
      />
      <a
        className="consonant-filters--item-link"
        data-testid="filter-item__item-link"
        href="#"
        onClick={[Function]}
      >
        Topic
        <div
          className="consonant-filters--item-selcted-items"
          data-qty=""
        >
          
          
          
          
          
          
          
          
          
          
        </div>
      </a>
    </h3>
    <ul
      className="consonant-filters--item-list"
    >
      <li
        className="consonant-filters--item-list-item"
        data-testid="list-item"
      >
        <label
          className="consonant-filters--item-list-label"
        >
          <input
            checked={undefined}
            data-testid="list-item-checkbox"
            onChange={[Function]}
            type="checkbox"
            value="we-retail:activity/hiking"
          />
          <span
            className="consonant-filters--item-list-item-checkmark"
          />
          <span
            className="consonant-filters--item-list-item-name"
          >
            Business Continuity
          </span>
        </label>
      </li>
      <li
        className="consonant-filters--item-list-item"
        data-testid="list-item"
      >
        <label
          className="consonant-filters--item-list-label"
        >
          <input
            checked={undefined}
            data-testid="list-item-checkbox"
            onChange={[Function]}
            type="checkbox"
            value="we-retail:activity/biking"
          />
          <span
            className="consonant-filters--item-list-item-checkmark"
          />
          <span
            className="consonant-filters--item-list-item-name"
          >
            Creativity and Design
          </span>
        </label>
      </li>
      <li
        className="consonant-filters--item-list-item"
        data-testid="list-item"
      >
        <label
          className="consonant-filters--item-list-label"
        >
          <input
            checked={undefined}
            data-testid="list-item-checkbox"
            onChange={[Function]}
            type="checkbox"
            value="adobe-com-enterprise:topic/customer-intelligence"
          />
          <span
            className="consonant-filters--item-list-item-checkmark"
          />
          <span
            className="consonant-filters--item-list-item-name"
          >
            Customer Intelligence
          </span>
        </label>
      </li>
      <li
        className="consonant-filters--item-list-item"
        data-testid="list-item"
      >
        <label
          className="consonant-filters--item-list-label"
        >
          <input
            checked={undefined}
            data-testid="list-item-checkbox"
            onChange={[Function]}
            type="checkbox"
            value="adobe-com-enterprise:topic/data-management-platform"
          />
          <span
            className="consonant-filters--item-list-item-checkmark"
          />
          <span
            className="consonant-filters--item-list-item-name"
          >
            Data Management Platform
          </span>
        </label>
      </li>
      <li
        className="consonant-filters--item-list-item"
        data-testid="list-item"
      >
        <label
          className="consonant-filters--item-list-label"
        >
          <input
            checked={undefined}
            data-testid="list-item-checkbox"
            onChange={[Function]}
            type="checkbox"
            value="adobe-com-enterprise:topic/digital-foundation"
          />
          <span
            className="consonant-filters--item-list-item-checkmark"
          />
          <span
            className="consonant-filters--item-list-item-name"
          >
            Digital Foundation
          </span>
        </label>
      </li>
      <li
        className="consonant-filters--item-list-item"
        data-testid="list-item"
      >
        <label
          className="consonant-filters--item-list-label"
        >
          <input
            checked={undefined}
            data-testid="list-item-checkbox"
            onChange={[Function]}
            type="checkbox"
            value="adobe-com-enterprise:topic/digital-trends"
          />
          <span
            className="consonant-filters--item-list-item-checkmark"
          />
          <span
            className="consonant-filters--item-list-item-name"
          >
            Digital Trends
          </span>
        </label>
      </li>
      <li
        className="consonant-filters--item-list-item"
        data-testid="list-item"
      >
        <label
          className="consonant-filters--item-list-label"
        >
          <input
            checked={undefined}
            data-testid="list-item-checkbox"
            onChange={[Function]}
            type="checkbox"
            value="adobe-com-enterprise:topic/document-management"
          />
          <span
            className="consonant-filters--item-list-item-checkmark"
          />
          <span
            className="consonant-filters--item-list-item-name"
          >
            Document Management
          </span>
        </label>
      </li>
      <li
        className="consonant-filters--item-list-item"
        data-testid="list-item"
      >
        <label
          className="consonant-filters--item-list-label"
        >
          <input
            checked={undefined}
            data-testid="list-item-checkbox"
            onChange={[Function]}
            type="checkbox"
            value="adobe-com-enterprise:topic/marketing-automation"
          />
          <span
            className="consonant-filters--item-list-item-checkmark"
          />
          <span
            className="consonant-filters--item-list-item-name"
          >
            Marketing Automation
          </span>
        </label>
      </li>
      <li
        className="consonant-filters--item-list-item"
        data-testid="list-item"
      >
        <label
          className="consonant-filters--item-list-label"
        >
          <input
            checked={undefined}
            data-testid="list-item-checkbox"
            onChange={[Function]}
            type="checkbox"
            value="adobe-com-enterprise:topic/personalization"
          />
          <span
            className="consonant-filters--item-list-item-checkmark"
          />
          <span
            className="consonant-filters--item-list-item-name"
          >
            Personalization
          </span>
        </label>
      </li>
      <li
        className="consonant-filters--item-list-item"
        data-testid="list-item"
      >
        <label
          className="consonant-filters--item-list-label"
        >
          <input
            checked={undefined}
            data-testid="list-item-checkbox"
            onChange={[Function]}
            type="checkbox"
            value="adobe-com-enterprise:topic/Stock"
          />
          <span
            className="consonant-filters--item-list-item-checkmark"
          />
          <span
            className="consonant-filters--item-list-item-name"
          >
            Stock
          </span>
        </label>
      </li>
    </ul>
    <div
      className="consonant-filters--mobile-footer"
    >
      <span
        className="consonant-filters--mobile-footer-total-res"
      >
        0
         results
      </span>
      <button
        className="consonant-filters--mobile-footer-btn"
        onClick={[Function]}
        type="button"
      >
        Done
      </button>
    </div>
  </div>
</div>
`;

exports[`Consonant/FilterItem Check snapshots should renders correctly when opened 1`] = `
<div
  className="consonant-filters--item consonant-filters--item_opened"
  data-testid="filter-item"
>
  <div
    className="consonant-filters--item-inner"
  >
    <h3
      className="consonant-filters--item-name"
    >
      <img
        alt=""
        loading="lazy"
        src="https://upload.wikimedia.org/wikipedia/commons/e/e0/Check_green_icon.svg"
        width="16"
      />
      <a
        className="consonant-filters--item-link"
        data-testid="filter-item__item-link"
        href="#"
        onClick={[Function]}
      >
        Topic
        <div
          className="consonant-filters--item-selcted-items"
          data-qty=""
        >
          
          
          
          
          
          
          
          
          
          
        </div>
      </a>
    </h3>
    <ul
      className="consonant-filters--item-list"
    >
      <li
        className="consonant-filters--item-list-item"
        data-testid="list-item"
      >
        <label
          className="consonant-filters--item-list-label"
        >
          <input
            checked={undefined}
            data-testid="list-item-checkbox"
            onChange={[Function]}
            type="checkbox"
            value="we-retail:activity/hiking"
          />
          <span
            className="consonant-filters--item-list-item-checkmark"
          />
          <span
            className="consonant-filters--item-list-item-name"
          >
            Business Continuity
          </span>
        </label>
      </li>
      <li
        className="consonant-filters--item-list-item"
        data-testid="list-item"
      >
        <label
          className="consonant-filters--item-list-label"
        >
          <input
            checked={undefined}
            data-testid="list-item-checkbox"
            onChange={[Function]}
            type="checkbox"
            value="we-retail:activity/biking"
          />
          <span
            className="consonant-filters--item-list-item-checkmark"
          />
          <span
            className="consonant-filters--item-list-item-name"
          >
            Creativity and Design
          </span>
        </label>
      </li>
      <li
        className="consonant-filters--item-list-item"
        data-testid="list-item"
      >
        <label
          className="consonant-filters--item-list-label"
        >
          <input
            checked={undefined}
            data-testid="list-item-checkbox"
            onChange={[Function]}
            type="checkbox"
            value="adobe-com-enterprise:topic/customer-intelligence"
          />
          <span
            className="consonant-filters--item-list-item-checkmark"
          />
          <span
            className="consonant-filters--item-list-item-name"
          >
            Customer Intelligence
          </span>
        </label>
      </li>
      <li
        className="consonant-filters--item-list-item"
        data-testid="list-item"
      >
        <label
          className="consonant-filters--item-list-label"
        >
          <input
            checked={undefined}
            data-testid="list-item-checkbox"
            onChange={[Function]}
            type="checkbox"
            value="adobe-com-enterprise:topic/data-management-platform"
          />
          <span
            className="consonant-filters--item-list-item-checkmark"
          />
          <span
            className="consonant-filters--item-list-item-name"
          >
            Data Management Platform
          </span>
        </label>
      </li>
      <li
        className="consonant-filters--item-list-item"
        data-testid="list-item"
      >
        <label
          className="consonant-filters--item-list-label"
        >
          <input
            checked={undefined}
            data-testid="list-item-checkbox"
            onChange={[Function]}
            type="checkbox"
            value="adobe-com-enterprise:topic/digital-foundation"
          />
          <span
            className="consonant-filters--item-list-item-checkmark"
          />
          <span
            className="consonant-filters--item-list-item-name"
          >
            Digital Foundation
          </span>
        </label>
      </li>
      <li
        className="consonant-filters--item-list-item"
        data-testid="list-item"
      >
        <label
          className="consonant-filters--item-list-label"
        >
          <input
            checked={undefined}
            data-testid="list-item-checkbox"
            onChange={[Function]}
            type="checkbox"
            value="adobe-com-enterprise:topic/digital-trends"
          />
          <span
            className="consonant-filters--item-list-item-checkmark"
          />
          <span
            className="consonant-filters--item-list-item-name"
          >
            Digital Trends
          </span>
        </label>
      </li>
      <li
        className="consonant-filters--item-list-item"
        data-testid="list-item"
      >
        <label
          className="consonant-filters--item-list-label"
        >
          <input
            checked={undefined}
            data-testid="list-item-checkbox"
            onChange={[Function]}
            type="checkbox"
            value="adobe-com-enterprise:topic/document-management"
          />
          <span
            className="consonant-filters--item-list-item-checkmark"
          />
          <span
            className="consonant-filters--item-list-item-name"
          >
            Document Management
          </span>
        </label>
      </li>
      <li
        className="consonant-filters--item-list-item"
        data-testid="list-item"
      >
        <label
          className="consonant-filters--item-list-label"
        >
          <input
            checked={undefined}
            data-testid="list-item-checkbox"
            onChange={[Function]}
            type="checkbox"
            value="adobe-com-enterprise:topic/marketing-automation"
          />
          <span
            className="consonant-filters--item-list-item-checkmark"
          />
          <span
            className="consonant-filters--item-list-item-name"
          >
            Marketing Automation
          </span>
        </label>
      </li>
      <li
        className="consonant-filters--item-list-item"
        data-testid="list-item"
      >
        <label
          className="consonant-filters--item-list-label"
        >
          <input
            checked={undefined}
            data-testid="list-item-checkbox"
            onChange={[Function]}
            type="checkbox"
            value="adobe-com-enterprise:topic/personalization"
          />
          <span
            className="consonant-filters--item-list-item-checkmark"
          />
          <span
            className="consonant-filters--item-list-item-name"
          >
            Personalization
          </span>
        </label>
      </li>
      <li
        className="consonant-filters--item-list-item"
        data-testid="list-item"
      >
        <label
          className="consonant-filters--item-list-label"
        >
          <input
            checked={undefined}
            data-testid="list-item-checkbox"
            onChange={[Function]}
            type="checkbox"
            value="adobe-com-enterprise:topic/Stock"
          />
          <span
            className="consonant-filters--item-list-item-checkmark"
          />
          <span
            className="consonant-filters--item-list-item-name"
          >
            Stock
          </span>
        </label>
      </li>
    </ul>
    <div
      className="consonant-filters--mobile-footer"
    >
      <span
        className="consonant-filters--mobile-footer-total-res"
      >
        0
         results
      </span>
      <button
        className="consonant-filters--mobile-footer-btn"
        onClick={[Function]}
        type="button"
      >
        Done
      </button>
    </div>
  </div>
</div>
`;
